Fixed wrong behavior when creating a new note in Elastic theme

--- a/skins/elastic/css/main.css
+++ b/skins/elastic/css/main.css
@@ -67,7 +67,7 @@ div.ddnotes_sticky_title {
     background-color: #fff;
 }
 
-div.tinyMDE {
+div.TinyMDE {
     min-height: 300px;
     background-color: #f4f4f4;
 }
